# snekwrap

./: .gitignore  .gitmodules  .mutagenignore  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
containers/: rf_diff.Dockerfile  rf_diff.apptainer.def  rf_diff.apptainer_w_weights.def  rf_diff.apptainer_w_weightsBKUP.def  rfdiff_install.md
examples/pottsmpnn/: .gitignore  energy_prediction.ipynb  energy_prediction.py  sequence_generation.ipynb  sequence_generation.py
snekwrap/: __init__.py  config.py  executables.yaml
snekwrap/backend/: MSAs.py  cdhit.py  chimerax.py  colabfold.py  database_queries.py  esmfold.py  pdb_tools.py
snekwrap/backend/proteinmpnn/: protein_mpnn.py
snekwrap/backend/rfdiff/: RFDiffusion.py
snekwrap/scripts/: align_and_export_pdbs_chimerax.py  align_structures_chimerax.py
snekwrap/seq/: __init__.py  pssms.py  seqtools.py
snekwrap/struct/: __init__.py  biotite.py
snekwrap/struct/biopython_tools/: __init__.py  basic.py  contacts.py  visualize.py
snekwrap/tests/: test_edible_wrappers.py
snekwrap/wrappers/: MSAs.py  __init__.py  cdhit.py  colabfold.py  esmfold.py
snekwrap/wrappers/pottsmpnn/: __init__.py  energy_prediction.py  etab_utils.py  potts_mpnn.py  potts_mpnn_utils.py  run_utils.py  sample_seqs.py
snekwrap/wrappers/proteinmpnn/: protein_mpnn.py
snekwrap/wrappers/rfdiff/: RFDiffusion.py  colabdesign_utils.py
